--- a/diploma-frontend/frontend/templates/frontend/profileAvatar.html
+++ b/diploma-frontend/frontend/templates/frontend/profileAvatar.html
@@ -1,6 +1,6 @@
 <html lang="ru">
 <head>
-  <title>Megano</title>
+  <title>MBSERGELI</title>
   <meta name="description" content="Описание страницы">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
@@ -24,9 +24,9 @@
         <div class="row ControlPanel-row">
           <div class="row-block">
             <div class="row ControlPanel-rowSplit">
-              <div class="row-block"><a class="ControlPanel-title" href="#">Free Delivery</a>
+              <div class="row-block"><a class="ControlPanel-title" href="#">Бесплатная доставка</a>
               </div>
-              <div class="row-block hide_700"><span class="ControlPanel-title">Follow Us</span>
+              <div class="row-block hide_700"><span class="ControlPanel-title">Будте с нами</span>
                 <ul class="menu menu_img menu_smallImg ControlPanel-menu">
                   <li class="menu-item"><a class="menu-link" href="#"><img src="assets/img/icons/socialHeader/fb.svg" alt="fb.svg"/></a>
                   </li>
@@ -44,7 +44,7 @@
           </div>
           <nav class="row-block">
             <div class="row ControlPanel-rowSplit">
-              <div class="row-block"><a class="ControlPanel-title" href="/profile">Login / Register</a>
+              <div class="row-block"><a class="ControlPanel-title" href="/profile">Вход/Зарегистрируйтесь</a>
               </div>
             </div>
           </nav>
@@ -58,12 +58,12 @@
         <nav class="row-block row-block_right Header-menu">
           <div class="menuModal" id="navigate">
             <ul class="menu menu_main">
-              <li class="breadcrumbs-item"><a href="/">Home</a>
+              <li class="breadcrumbs-item"><a href="/">Главный</a>
               </li>
 
-              <li class="menu-item"><a class="menu-link" href="/sale">Sale</a>
+              <li class="menu-item"><a class="menu-link" href="/sale">Продажа</a>
               </li>
-              <li class="menu-item"><span class="menu-label menu-label_success">Hot</span><a class="menu-link" href="/product">Gallery</a>
+              <li class="menu-item"><span class="menu-label menu-label_success">Hot</span><a class="menu-link" href="/product">Галерея</a>
               </li>
               </li>
             </ul>
@@ -71,7 +71,7 @@
         </nav>
         <div class="row-block">
           <div class="CartBlock"><a class="CartBlock-block" href="/cart"><img class="CartBlock-img" src="assets/img/icons/cart.svg" alt="cart.svg"/><span class="CartBlock-amount">0</span></a>
-            <div class="CartBlock-block"><span class="CartBlock-price">0.00$</span>
+            <div class="CartBlock-block"><span class="CartBlock-price">0.00so'm</span>
             </div>
           </div>
         </div>
@@ -87,7 +87,7 @@
           <div class="CategoriesButton">
             <div class="CategoriesButton-title">
               <div class="CategoriesButton-icon"><img src="assets/img/icons/allDep.svg" alt="allDep.svg"/>
-              </div><span class="CategoriesButton-text">All Departments</span>
+              </div><span class="CategoriesButton-text">Все отделы</span>
               <div class="CategoriesButton-arrow">
               </div>
             </div>
@@ -120,7 +120,7 @@
           <div class="search">
             <form class="form form_search" action="#" method="post">
               <input class="search-input" id="query" name="query" type="text" placeholder="What are you looking for ..."/>
-              <button class="search-button" type="submit" name="search" id="search"><img src="assets/img/icons/search.svg" alt="search.svg"/>Search
+              <button class="search-button" type="submit" name="search" id="search"><img src="assets/img/icons/search.svg" alt="search.svg"/>Поиск
               </button>
             </form>
           </div>
@@ -183,19 +183,19 @@
                   <div class="form-group">
                     <label class="form-label" for="name">ФИО
                     </label>
-                    <input class="form-input" id="name" name="name" type="text" value="Иванов Иван Иванович"/>
+                    <input class="form-input" id="name" name="name" type="text" value="Сулйамонов Нурали Амиржанович"/>
                   </div>
                 </div>
                 <div class="row-block">
                   <div class="form-group">
                     <label class="form-label" for="phone">Телефон
                     </label>
-                    <input class="form-input" id="phone" name="phone" type="text" value="+70000000000"/>
+                    <input class="form-input" id="phone" name="phone" type="text" value="+998990309986"/>
                   </div>
                   <div class="form-group">
                     <label class="form-label" for="mail">E-mail
                     </label>
-                    <input class="form-input" id="mail" name="mail" type="text" value="send@test.test"/>
+                    <input class="form-input" id="mail" name="mail" type="text" value="snurali1986@gmail.com"/>
                   </div>
                   <div class="form-group">
                     <label class="form-label" for="password">Пароль
@@ -225,8 +225,7 @@
     <div class="wrap">
       <div class="row Footer-main">
         <div class="row-block"><a class="logo Footer-logo" href="/"><img class="logo-image" src="assets/img/logo_footer.png" alt="logo_footer.png"/></a>
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincid  unt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad
-          </p>
+          <p>Доверие: Мы заслужили доверие наших клиентов благодаря нашему профессионализму, честности и постоянному стремлению к улучшению.</p>
           <ul class="menu menu_img menu_smallImg Footer-menuSoc">
             <li class="menu-item"><a class="menu-link" href="#"><img src="assets/img/icons/socialFooter/fb.svg" alt="fb.svg"/></a>
             </li>
@@ -241,30 +240,30 @@
           </ul>
         </div>
         <div class="row-block">
-          <strong class="Footer-title">Useful Links
+          <strong class="Footer-title">Полезные ссылки
           </strong>
           <ul class="menu menu_vt Footer-menu">
-            <li class="menu-item"><a class="menu-link" href="#">Checkout</a>
+            <li class="menu-item"><a class="menu-link" href="#">Проверка</a>
             </li>
-            <li class="menu-item"><a class="menu-link" href="#">My Cart</a>
+            <li class="menu-item"><a class="menu-link" href="#">Моя корзина</a>
             </li>
-            <li class="menu-item"><a class="menu-link" href="#">Delivery</a>
+            <li class="menu-item"><a class="menu-link" href="#">Доставка</a>
             </li>
-            <li class="menu-item"><a class="menu-link" href="#">Order Info</a>
+            <li class="menu-item"><a class="menu-link" href="#">Информация о заказе</a>
             </li>
-            <li class="menu-item"><a class="menu-link" href="#">Terms</a>
+            <li class="menu-item"><a class="menu-link" href="#">Условия</a>
             </li>
-            <li class="menu-item"><a class="menu-link" href="#">Conditions</a>
+            <li class="menu-item"><a class="menu-link" href="#">Условия</a>
             </li>
           </ul>
         </div>
         <div class="row-block">
-          <strong class="Footer-title">My Account
+          <strong class="Footer-title">Мой аккаунт
           </strong>
           <ul class="menu menu_vt Footer-menu">
-            <li class="menu-item"><a class="menu-link" href="#">Accessories</a>
+            <li class="menu-item"><a class="menu-link" href="#">Аксессуары</a>
             </li>
-            <li class="menu-item"><a class="menu-link" href="#">Bags</a>
+            <li class="menu-item"><a class="menu-link" href="#">Мешки</a>
             </li>
             <li class="menu-item"><a class="menu-link" href="#">Cameras</a>
             </li>
@@ -279,7 +278,7 @@
         <div class="row-block">
           <strong class="Footer-title">Contacts
           </strong>
-          <p>Phone: 8.800.200.600<br>Email: Support@ninzio.com<br>Skype: techno<br>Address: New York, north<br>Avenue 26/7<br>0057
+          <p>Телефон: +998990309986<br>Email: snurali1986@gmali.com<br>Адресс:г.Ташкент Сергели авторынок<br>1/1/2
           </p>
         </div>
       </div>
@@ -287,9 +286,9 @@
     <div class="Footer-copy">
       <div class="wrap">
         <div class="row row_space">
-          <div class="row-block">© Copyright&#32;<a href="#">Megano Store.</a>&#32;All rights reserved.
+          <div class="row-block">© Copyright&#32;<a href="#">MBSERGELI</a>&#32;All rights reserved.
           </div>
-          <div class="row-block"><span>Accepted Payments</span>
+          <div class="row-block"><span>Принятые платежи</span>
             <div class="Footer-payments">
               <div><img src="assets/img/payments/visa.png" alt="visa.png"/>
               </div>
