--- a/diploma-frontend/frontend/templates/frontend/about.html
+++ b/diploma-frontend/frontend/templates/frontend/about.html
@@ -6,12 +6,12 @@
     <div class="Middle-top">
       <div class="wrap">
         <div class="Middle-header">
-          <h1 class="Middle-title">About Megano
+          <h1 class="Middle-title">Про нас
           </h1>
           <ul class="breadcrumbs Middle-breadcrumbs">
-            <li class="breadcrumbs-item"><a href="/">Home</a>
+            <li class="breadcrumbs-item"><a href="/">Главный</a>
             </li>
-            <li class="breadcrumbs-item breadcrumbs-item_current"><span>About Us</span>
+            <li class="breadcrumbs-item breadcrumbs-item_current"><span>Про нас</span>
             </li>
           </ul>
         </div>
@@ -25,9 +25,9 @@
               <div class="media-image"><img src="{% static 'frontend/assets/img/icons/advantages/shipping.svg' %}" alt="shipping.svg"/>
               </div>
               <div class="media-content">
-                <strong class="media-title">Shipping & Returns
+                <strong class="media-title">Доставка и Возврат
                 </strong>
-                <p class="media-text">World wide shipping
+                <p class="media-text">Доставка по региону и по столицы
                 </p>
               </div>
             </div>
@@ -37,9 +37,9 @@
               <div class="media-image"><img src="{% static 'frontend/assets/img/icons/advantages/moneyBack.svg' %}" alt="moneyBack.svg"/>
               </div>
               <div class="media-content">
-                <strong class="media-title">Money Back
+                <strong class="media-title">Возврат денег
                 </strong>
-                <p class="media-text">Guaranted payments
+                <p class="media-text">Зашита платежа
                 </p>
               </div>
             </div>
@@ -49,9 +49,9 @@
               <div class="media-image"><img src="{% static 'frontend/assets/img/icons/advantages/support.svg' %}" alt="support.svg"/>
               </div>
               <div class="media-content">
-                <strong class="media-title">Support Policy
+                <strong class="media-title">Политика поддержки
                 </strong>
-                <p class="media-text">Fast support team
+                <p class="media-text">Команда быстрой доставки
                 </p>
               </div>
             </div>
@@ -61,16 +61,16 @@
               <div class="media-image"><img src="{% static 'frontend/assets/img/icons/advantages/quality.svg' %}" alt="quality.svg"/>
               </div>
               <div class="media-content">
-                <strong class="media-title">Quality Guarantee
+                <strong class="media-title">Гарантия качества
                 </strong>
-                <p class="media-text">Best guaranted items
+                <p class="media-text">Лучшие гарантированый товары
                 </p>
               </div>
             </div>
           </div>
           <div class="Section-columnSection">
             <header class="Section-header">
-              <strong class="Section-title">Follow Us
+              <strong class="Section-title">Быть с нами
               </strong>
             </header>
             <div class="Section-columnContent">
@@ -90,12 +90,25 @@
             <div class="Article-section">
               <div class="row row_verticalCenter row_maxHalf">
                 <div class="row-block">
-                  <h2>Why Choose Megano?
+                  <h2>Почему выбираете MBSERGELI
                   </h2>
-                  <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit doli. Aenean commodo ligula eget dolor. Aenean massa. Cumtipsu sociis natoque penatibus et magnis dis parturient montesti, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eutu, pretiumem.
+                  <p>Почему выбирают MBSERGELI?
+
+Выбор MBSERGELI - это выбор качества, доступности и удобства. Вот несколько причин, по которым наши клиенты выбирают нас:
+
+Цена: Мы предлагаем самые низкие цены на автозапчасти в Сергелинском авторынке. Наша цель - сделать автозапчасти доступными для всех.
+
+Ассортимент: У нас есть все, что вам может понадобиться. Наш ассортимент включает все виды автозапчастей и расходных материалов, которые вы можете найти на авторынке.
+
+Удобство: Мы знаем, насколько важно для вас быстро найти нужную запчасть. Поэтому мы делаем все возможное, чтобы сделать процесс поиска и покупки запчастей максимально простым и удобным.
+
+Оригинальность: Мы продаем только оригинальные автозапчасти GM. Вы можете быть уверены в качестве каждой покупки.
+
+Доверие: Мы заслужили доверие наших клиентов благодаря нашему профессионализму, честности и постоянному стремлению к улучшению.
+
+Выбирайте MBSERGELI - и вы не пожалеете! 😊
                   </p>
-                  <p>Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justotuio, rhoncus ut loret, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus element semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae  ligula eget dolor. Aenean massa. Cumtipsu sociis natoque pena tibusetm t semper ni.
-                  </p>
+
                   <div><a class="btn btn_primary" href="#">Get Started</a>
                   </div>
                 </div>
@@ -112,24 +125,33 @@
                   </div>
                 </div>
                 <div class="row-block">
-                  <h2>Megano Store Hystory
+                  <h2>История создания MBSERGELI
                   </h2>
-                  <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit doli. Aenean commodo ligula eget dolor. Aenean massa. Cumtipsu sociis natoque penatibus et magnis dis parturient montesti, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eutu, pretiumem.
-                  </p>
+                  <p>История создания MBSERGELI
+
+Все началось с одного человека, Нурали Сулаймонова. Он был страстным автолюбителем и заметил проблему на рынке автозапчастей - сложность в поиске и покупке нужных деталей. Это было не только неудобно для покупателей, но и для продавцов, которые теряли потенциальных клиентов из-за этого барьера.
+
+Так возникла идея MBSERGELI - сайта, который сводит вместе покупателей и продавцов автозапчастей. Нурали хотел создать платформу, которая была бы не только удобной для покупателей, но и выгодной для продавцов.
+
+С этой идеей Нурали начал работу над MBSERGELI. Он провел много времени, изучая рынок, разрабатывая стратегию и создавая сайт. Его целью было сделать процесс поиска и покупки автозапчастей максимально простым и удобным.
+
+С тех пор MBSERGELI стал одним из ведущих сайтов для покупки автозапчастей в Сергелинском авторынке. Нурали продолжает работать над улучшением сайта, стремясь сделать его еще более удобным для покупателей и продавцов.
+
+Именно так, благодаря страсти и упорству Нурали Сулаймонова, родился MBSERGELI. 😊</p>
                   <ul>
-                    <li>Lorem ipsum dolor sit amet, consectetuer
-                    </li>
-                    <li>adipiscing elit doli. Aenean commodo ligula
-                    </li>
-                    <li>eget dolor. Aenean massa. Cumtipsu sociis
-                    </li>
-                    <li>natoque penatibus et magnis dis parturient
-                    </li>
-                    <li>montesti, nascetur ridiculus mus. Donec
-                    </li>
-                    <li>quam felis, ultricies nec, pellentesque eutu
-                    </li>
-                  </ul>
+    <li>Все началось с одного человека, Нурали Сулаймонова.</li>
+    <li>Он был страстным автолюбителем и заметил проблему на рынке автозапчастей - сложность в поиске и покупке нужных деталей.</li>
+    <li>Это было не только неудобно для покупателей, но и для продавцов, которые теряли потенциальных клиентов из-за этого барьера.</li>
+    <li>Так возникла идея MBSERGELI - сайта, который сводит вместе покупателей и продавцов автозапчастей.</li>
+    <li>Нурали хотел создать платформу, которая была бы не только удобной для покупателей, но и выгодной для продавцов.</li>
+    <li>С этой идеей Нурали начал работу над MBSERGELI.</li>
+    <li>Он провел много времени, изучая рынок, разрабатывая стратегию и создавая сайт.</li>
+    <li>Его целью было сделать процесс поиска и покупки автозапчастей максимально простым и удобным.</li>
+    <li>С тех пор MBSERGELI стал одним из ведущих сайтов для покупки автозапчастей в Сергелинском авторынке.</li>
+    <li>Нурали продолжает работать над улучшением сайта, стремясь сделать его еще более удобным для покупателей и продавцов.</li>
+    <li>Именно так, благодаря страсти и упорству Нурали Сулаймонова, родился MBSERGELI. 😊</li>
+</ul>
+
                 </div>
               </div>
             </div>
