--- a/diploma-frontend/frontend/templates/frontend/catalog.html
+++ b/diploma-frontend/frontend/templates/frontend/catalog.html
@@ -6,10 +6,10 @@
     <div class="Middle-top">
       <div class="wrap">
         <div class="Middle-header">
-          <h1 class="Middle-title">Catalog Megano
+          <h1 class="Middle-title">Каталог MBSERGELI
           </h1>
           <ul class="breadcrumbs Middle-breadcrumbs">
-            <li class="breadcrumbs-item"><a href="/">Home</a>
+            <li class="breadcrumbs-item"><a href="/">Главный</a>
             </li>
             <li class="breadcrumbs-item breadcrumbs-item_current"><span>Каталог</span>
             </li>
