--- a/diploma-frontend/frontend/templates/frontend/index.html
+++ b/diploma-frontend/frontend/templates/frontend/index.html
@@ -33,7 +33,7 @@
       <div class="wrap">
         <div class="Section-content">
           <header class="Section-header">
-            <h2 class="Section-title">Popular Products
+            <h2 class="Section-title">Популярные товары
             </h2>
           </header>
           <div class="Cards">
@@ -68,9 +68,9 @@
               <div class="media-image"><img src="{% static 'frontend/assets/img/icons/advantages/shipping.svg' %}" alt="shipping.svg"/>
               </div>
               <div class="media-content">
-                <strong class="media-title">Shipping & Returns
+                <strong class="media-title">Доставка и возврат
                 </strong>
-                <p class="media-text">World wide shipping
+                <p class="media-text">Доставка по регионам
                 </p>
               </div>
             </div>
@@ -80,9 +80,9 @@
               <div class="media-image"><img src="{% static 'frontend/assets/img/icons/advantages/moneyBack.svg' %}" alt="moneyBack.svg"/>
               </div>
               <div class="media-content">
-                <strong class="media-title">Money Back
+                <strong class="media-title">Возврат денег
                 </strong>
-                <p class="media-text">Guaranted payments
+                <p class="media-text">Гарантированые платежы
                 </p>
               </div>
             </div>
@@ -92,9 +92,9 @@
               <div class="media-image"><img src="{% static 'frontend/assets/img/icons/advantages/support.svg' %}" alt="support.svg"/>
               </div>
               <div class="media-content">
-                <strong class="media-title">Support Policy
+                <strong class="media-title">Политика поддержки
                 </strong>
-                <p class="media-text">Fast support team
+                <p class="media-text">Быстрая команда поддержки
                 </p>
               </div>
             </div>
@@ -104,9 +104,9 @@
               <div class="media-image"><img src="{% static 'frontend/assets/img/icons/advantages/quality.svg' %}" alt="quality.svg"/>
               </div>
               <div class="media-content">
-                <strong class="media-title">Quality Guarantee
+                <strong class="media-title">Гарантия качества
                 </strong>
-                <p class="media-text">Best guaranted items
+                <p class="media-text">Товары с наилучшей гарантией
                 </p>
               </div>
             </div>
@@ -115,7 +115,7 @@
         <div class="Section-content">
           <div class="Slider Slider_carousel">
             <header class="Section-header Section-header_close">
-              <h2 class="Section-title">Limited edition
+              <h2 class="Section-title">Ограниченный выпуск
               </h2>
               <div class="Section-control">
                 <div class="Slider-navigate">
