--- a/diploma-frontend/frontend/templates/frontend/product.html
+++ b/diploma-frontend/frontend/templates/frontend/product.html
@@ -6,10 +6,10 @@
     <div class="Middle-top">
       <div class="wrap">
         <div class="Middle-header">
-          <h1 class="Middle-title">Megano Product
+          <h1 class="Middle-title">MBSERGELI
           </h1>
           <ul class="breadcrumbs Middle-breadcrumbs">
-            <li class="breadcrumbs-item"><a href="/">home</a></li>
+            <li class="breadcrumbs-item"><a href="/">Главный</a></li>
             <li class="breadcrumbs-item breadcrumbs-item_current"><span>${product.title}$</span></li>
           </ul>
         </div>
@@ -136,7 +136,7 @@
                   </div>
                 </div>
                 <header class="Section-header Section-header_product">
-                  <h3 class="Section-title">Add Review</h3>
+                  <h3 class="Section-title">Добавить отзыв</h3>
                 </header>
                 <div class="Tabs-addComment">
                   <form class="form" @submit.prevent="submitReview">
@@ -165,7 +165,7 @@
                       </div>
                     </div>
                     <div class="form-group">
-                      <button class="btn btn_muted" type="submit">Submit Review</button>
+                      <button class="btn btn_muted" type="submit">Отправить отзыв</button>
                     </div>
                   </form>
                 </div>
