--- a/diploma-frontend/frontend/templates/frontend/sale.html
+++ b/diploma-frontend/frontend/templates/frontend/sale.html
@@ -6,12 +6,12 @@
     <div class="Middle-top">
       <div class="wrap">
         <div class="Middle-header">
-          <h1 class="Middle-title">Megano Sales
+          <h1 class="Middle-title">MBSERGELI
           </h1>
           <ul class="breadcrumbs Middle-breadcrumbs">
-            <li class="breadcrumbs-item"><a href="/">Home</a>
+            <li class="breadcrumbs-item"><a href="/">Главный</a>
             </li>
-            <li class="breadcrumbs-item breadcrumbs-item_current"><span>Sales</span>
+            <li class="breadcrumbs-item breadcrumbs-item_current"><span>Продажи</span>
             </li>
           </ul>
         </div>
