--- a/diploma-frontend/frontend/templates/frontend/historyorder.html
+++ b/diploma-frontend/frontend/templates/frontend/historyorder.html
@@ -61,7 +61,7 @@
                       <div class="Order-infoType">Общая стоимость:
                       </div>
                       <div class="Order-infoContent">
-                        <span class="Order-price">${order.totalCost}$$</span>
+                        <span class="Order-price">${order.totalCost}$ сум</span>
                       </div>
                     </div>
                     <div class="Order-info Order-info_status">
