--- a/diploma-frontend/frontend/templates/frontend/index.html
+++ b/diploma-frontend/frontend/templates/frontend/index.html
@@ -15,7 +15,7 @@
               <div class="BannersHomeBlock-block">
                 <strong class="BannersHomeBlock-title">${ banner.title }$
                 </strong>
-                <div class="BannersHomeBlock-content">from &#32;<span class="BannersHomeBlock-price">$ ${ banner.price }$</span>
+                <div class="BannersHomeBlock-content">от &#32;<span class="BannersHomeBlock-price">${ banner.price }$ сум</span>
                 </div>
               </div>
               <div class="BannersHomeBlock-block" v-if="banner.images.length > 0">
@@ -46,7 +46,7 @@
                 <strong class="Card-title"><a :href="`/product/${card.id}/`">${ card.title }$</a>
                 </strong>
                 <div class="Card-description">
-                  <div class="Card-cost"><span class="Card-price">$${ card.price }$</span>
+                  <div class="Card-cost"><span class="Card-price">${ card.price }$ сум</span>
                   </div>
                   <div class="Card-hover"><a class="Card-btn" :href="`/product/${card.id}/`">
                     <img src="{% static 'frontend/assets/img/icons/card/cart.svg' %}" alt="cart.svg"/></a>
@@ -150,7 +150,7 @@
                   <strong class="Card-title"><a :href="`/product/${card.id}/`">${ card.title }$</a>
                   </strong>
                   <div class="Card-description">
-                    <div class="Card-cost"><span class="Card-price">$${ card.price }$</span>
+                    <div class="Card-cost"><span class="Card-price">${ card.price }$ сум</span>
                     </div>
                     <div class="Card-hover"><a class="Card-btn" href="#">
                       <img src="{% static 'frontend/assets/img/icons/card/cart.svg' %}" alt="cart.svg"/></a>
