--- a/diploma-frontend/frontend/templates/frontend/profileAvatar.html
+++ b/diploma-frontend/frontend/templates/frontend/profileAvatar.html
@@ -71,7 +71,7 @@
         </nav>
         <div class="row-block">
           <div class="CartBlock"><a class="CartBlock-block" href="/cart"><img class="CartBlock-img" src="assets/img/icons/cart.svg" alt="cart.svg"/><span class="CartBlock-amount">0</span></a>
-            <div class="CartBlock-block"><span class="CartBlock-price">0.00so'm</span>
+            <div class="CartBlock-block"><span class="CartBlock-price">0.00 сум</span>
             </div>
           </div>
         </div>
