--- a/diploma-frontend/frontend/templates/frontend/sale.html
+++ b/diploma-frontend/frontend/templates/frontend/sale.html
@@ -34,9 +34,9 @@
               </div>
               <div class="Card-content">
                 <strong class="Card-title">${ card.title }$</strong>
-                <div class="Card-description"><s>${ card.price }$</s></div>
+                <div class="Card-description"><s>${ card.price }$ сум</s></div>
                 <br>
-                <div class="Card-description">${ card.salePrice }$</div>
+                <div class="Card-description">${ card.salePrice }$ сум</div>
               </div>
             </a>
           </div>
